--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
