--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.5.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
