--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
     "react-countup": "^6.4.1",
-    "react-dates": "^21.8.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
