--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.7.1",
     "react-modal-video": "^2.0.0",
     "react-on-screen": "^2.1.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
